--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="/1.jpg" alt="First slide">
+                <img class="d-block w-100" src="1.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/2.jpg" alt="Second slide">
+                <img class="d-block w-100" src="2.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/18.jpg" alt="Third slide">
+                <img class="d-block w-100" src="18.jpg" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/4.jpg" alt="Forth slide">
+                <img class="d-block w-100" src="4.jpg" alt="Forth slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/19.jpg" alt="Fifth slide">
+                <img class="d-block w-100" src="19.jpg" alt="Fifth slide">
               </div>
             </div>
             <a
