--- a/movies.html
+++ b/movies.html
@@ -25,19 +25,19 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="/17.jpg" alt="First slide">
+            <img class="d-block w-100" src="17.jpg" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/9.jpg" alt="Second slide">
+            <img class="d-block w-100" src="9.jpg" alt="Second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/7.jpg" alt="Third slide">
+            <img class="d-block w-100" src="7.jpg" alt="Third slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/14.jpg" alt="Forth slide">
+            <img class="d-block w-100" src="14.jpg" alt="Forth slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="/3.jpg" alt="Fifth slide">
+            <img class="d-block w-100" src="3.jpg" alt="Fifth slide">
           </div>
         </div>
         <a
@@ -77,28 +77,28 @@
           <div class="movie1">
               <div class="poster container-fluid row">
                   <div class="card post">
-                      <img src="/20.jpg" alt="card image cap" class="img">
+                      <img src="20.jpg" alt="card image cap" class="img">
                       <div class="description">
                           <h5>hello</h5>
                           <h6>bollywood action movie</h6>
                       </div>
                   </div>
                   <div class="card post">
-                      <img src="/19.jpg" alt="card image cap" class="img">
+                      <img src="19.jpg" alt="card image cap" class="img">
                       <div class="description">
                           <h5>amar akabar anthonay</h5>
                           <h6>bollywood sci-fi movie</h6>
                       </div>
                   </div>
                   <div class="card post">
-                      <img src="/18.jpg" alt="card image cap" class="img">
+                      <img src="18.jpg" alt="card image cap" class="img">
                       <div class="description">
                           <h5>satyamav jayte</h5>
                           <h6>holywood drama movie</h6>
                       </div>
                   </div>
                   <div class="card post">
-                      <img src="/17.jpg" alt="card image cap" class="img">
+                      <img src="17.jpg" alt="card image cap" class="img">
                       <div class="description">
                           <h5>malang</h5>
                           <h6>bollywood sci-fi movie</h6>
@@ -112,70 +112,70 @@
                       </div>
                   </div>
                   <div class="card post">
-                      <img src="/15.jpg" alt="card image cap" class="img">
+                      <img src="15.jpg" alt="card image cap" class="img">
                       <div class="description">
                           <h5>hello</h5>
                           <h6>bollywood action movie</h6>
                       </div>
                   </div>
                   <div class="card post">
-                      <img src="/14.jpg" alt="card image cap" class="img">
+                      <img src="14.jpg" alt="card image cap" class="img">
                       <div class="description">
                           <h5>thankyou</h5>
                           <h6>holywood drama movie</h6>
                       </div>
                   </div>
                   <div class="card post">
-                      <img src="/13.jpg" alt="card image cap" class="img">
+                      <img src="13.jpg" alt="card image cap" class="img">
                       <div class="description">
                           <h5>welcome</h5>
                           <h6>holywood drama movie</h6>
                       </div>
                   </div>
                   <div class="card post">
-                      <img src="/12.jpg" alt="card image cap" class="img">
+                      <img src="12.jpg" alt="card image cap" class="img">
                       <div class="description">
                           <h5>war</h5>
                           <h6>bollywood sci-fi movie</h6>
                       </div>
                   </div>
                   <div class="card post">
-                      <img src="/11.jpg" alt="card image cap" class="img">
+                      <img src="11.jpg" alt="card image cap" class="img">
                       <div class="description">
                           <h5>sholay</h5>
                           <h6>holywood drama movie</h6>
                       </div>
                   </div>
                   <div class="card post">
-                      <img src="/10.jpg" alt="card image cap" class="img">
+                      <img src="10.jpg" alt="card image cap" class="img">
                       <div class="description">
                           <h5>radhe</h5>
                           <h6>holywood action movie</h6>
                       </div>
                   </div>
                   <div class="card post">
-                      <img src="/9.jpg" alt="card image cap" class="img">
+                      <img src="9.jpg" alt="card image cap" class="img">
                       <div class="description">
                           <h5>spiderman</h5>
                           <h6>holywood sci-fi movie</h6>
                       </div>
                   </div>
                   <div class="card post">
-                      <img src="/8.jpg" alt="card image cap" class="img">
+                      <img src="8.jpg" alt="card image cap" class="img">
                       <div class="description">
                           <h5>thor</h5>
                           <h6>holywood drama movie</h6>
                       </div>
                   </div>
                   <div class="card post">
-                      <img src="/7.jpg" alt="card image cap" class="img">
+                      <img src="7.jpg" alt="card image cap" class="img">
                       <div class="description">
                           <h5>antman</h5>
                           <h6>holywood action movie</h6>
                       </div>
                   </div>
                   <div class="card post">
-                      <img src="/6.jpg" alt="card image cap" class="img">
+                      <img src="6.jpg" alt="card image cap" class="img">
                       <div class="description">
                           <h5>master</h5>
                           <h6>holywood action movie</h6>
