--- a/movies.html
+++ b/movies.html
@@ -105,7 +105,7 @@
                       </div>
                   </div>
                   <div class="card post">
-                      <img src="/16.jpg" alt="card image cap" class="img">
+                      <img src="16.jpg" alt="card image cap" class="img">
                       <div class="description">
                           <h5>ironman</h5>
                           <h6>bollywood action movie</h6>
